fixed bug where footer is overlapping

--- a/static/StyleSheet.css
+++ b/static/StyleSheet.css
@@ -1,20 +1,35 @@
 * {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
-  position: relative;
 }
 
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  position: relative;
   min-height: 100vh;
+}
+.container-fluid {
+	height:100%;
+	position: relative;
+	min-height: 50vh;
+}
+.packets{
+  overflow-wrap: break-word;
+}
+footer {
+  bottom: 0;
+  position: auto;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
 }
 
 /* Style the top navigation bar */
 .topnav {
   overflow: hidden;
   background-color: #2b4873;
-  /* bottom margin:2px; */
+  bottom margin:2px;
 }
 
 /* Style the topnav links */
@@ -38,7 +53,8 @@ body {
   background-color: #ddd;
   padding: 10px;
   text-align: center;
-  /* bottom margin:2px; */
+  bottom margin:2px;
+  
 }
 
 .submitbutton {
@@ -48,10 +64,12 @@ body {
   /* background: #ffffff; */
   margin-left: 25%;
   margin-right:25%;
+  margin-bottom: 10%;
   padding: 20px;
   /* border: 4px solid #494949 !important; */
   display: inline-block;
   transition: all 0.4s ease 0s;
+
   color: #ffffff !important;
   background: #2b4873;
   border-color: #2b4873 !important;
@@ -63,19 +81,13 @@ body {
     background: #2b4873;
     border-color: #2b4873 !important; */
     transition: all 0.4s ease 0s;
+
     color: #494949 !important; 
     background: #f1f1f1;
     border-color: #494949 !important;
 
     }
 
-footer {
-  width: 100%;
-  background-color: #efefef;
-  text-align: center;
-  position: absolute;
-  bottom:0; 
-}
 
 /*
  * The MIT License
@@ -265,7 +277,6 @@ footer {
   margin-right:25%;
   margin-top: 10%;
   margin-bottom: 5%;
-  position: relative;
   padding: 20px 20px; }
   .dropzone.dz-clickable {
     cursor: pointer; }
